# kvm-virtual-machine-manager

./: CMakeLists.txt  README.md  aio.cpp  blk.cpp  compile.sh  raw.cpp
.github/workflows/: arch.yml  ubuntu.yml  windows.yml
cmake/defaults/: CompilerWarnings.cmake  Errors.cmake  PVSStudio.cmake  Sanitizers.cmake  Windows.cmake
cmake/extra/sanitizers/: FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  sanitize-helpers.cmake
data/kernels/: test-bzImage2
dependencies/: apt.txt  homebrew.txt  pacman.txt
include/: README.md  guest.h  options_parser.h  vcpu.h
kernels/virtio-rootfs/virt/: init  pre_init
libraries/virtio/: CMakeLists.txt
scripts/: README.md  example_start.sh
src/: README.md  guest.cpp  main.cpp  options_parser.cpp  vcpu.cpp
test/performance/: CMakeLists.txt  Configuration.cpp  Integral.cpp  Integral.h  config.h  configuration.txt  error.h  functions.cpp  functions.h  main.cpp  time_measure.cpp  time_measure.h
